--- a/chemistry/atom-calculator.html
+++ b/chemistry/atom-calculator.html
@@ -442,7 +442,7 @@ Everyday Life
   </div>
  </div>
   </div>
-  <div class="resultdiv">
+  <div class="output-group">
     
   </div>
   </details> 
