--- a/everyday-life/age-calculator.html
+++ b/everyday-life/age-calculator.html
@@ -311,7 +311,7 @@ Everyday Life
   </div>
   
   <div class="input-group">
-    <div id="ageResult"></div>
+    <div class="output-group"></div>
   </div>
   
 
@@ -474,7 +474,7 @@ Everyday Life
   
   <style>
   
-    #ageResult{
+    .output-group{
       font-family: "Young";
       line-height: 1.6;
       font-size: 1em;
