--- a/everyday-life/age-difference-calculator.html
+++ b/everyday-life/age-difference-calculator.html
@@ -235,7 +235,7 @@ Everyday Life
 </div>
   
   <div class="input-group">
-    <div id="ageResult"></div>
+    <div class="output-group"></div>
   </div>
   
 </div>
@@ -401,7 +401,7 @@ Everyday Life
   
   <style>
 
-    #ageResult{
+    .output-group{
       font-family: "Young";
       line-height: 1.6;
       font-size: 1em;
