--- a/health/fat-Intake-calculator.html
+++ b/health/fat-Intake-calculator.html
@@ -432,7 +432,7 @@ Everyday Life
   </div>
   
   <div class="input-group">
-    <div id="fatResults"></div>
+    <div class="output-group"></div>
   </div>
 
 </div>
@@ -600,7 +600,7 @@ Everyday Life
   </footer>
 
   <style>
-    #fatResults{
+    .output-group{
       font-family: "Young";
 line-height: 1.6;
 font-size: 1em;
