--- a/math/decimal-to-percent-converter.html
+++ b/math/decimal-to-percent-converter.html
@@ -439,13 +439,13 @@ Everyday Life
     font-weight: bold;
     color: #000;
   }
-    #rent-output{
+    .output-group{
       font-family: "Young";
       line-height: 1.6;
       font-size: .96em;
       color: #42445A;
     }
-    #rent-output label{
+    .output-group label{
       font-size: .96em;
     }
     #error-txt{
