--- a/statistics/risk-calculator.html
+++ b/statistics/risk-calculator.html
@@ -459,7 +459,7 @@ Everyday Life
   </div>
  </div>
   </div>
-  <div class="risk-insights-result">
+  <div class="output-group">
   
 </div>
 </div>
@@ -687,7 +687,7 @@ margin-bottom: 1em;
     message = `Both options carry the same level of risk.`;
   }
   
-  document.querySelector(".risk-insights-result").innerHTML = `
+  document.querySelector(".output-group").innerHTML = `
     <div class="result-message">${message}</div>
   `;
   
