--- a/agriculture/seed-rate-calculator.html
+++ b/agriculture/seed-rate-calculator.html
@@ -410,7 +410,7 @@ Everyday Life
  </div>
 </div>
 
-<div class="seed-rate-results">
+<div class="output-group">
   
 </div>
 
@@ -618,66 +618,6 @@ Everyday Life
     <span>Made with <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z"/></svg> in Earth</span>
   </footer>
   
-  <style>
-    #resultPopup {
-  position: fixed;
-  inset: 0;
-  background: rgba(0, 0, 0, 0);
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  z-index: 9999;
-  pointer-events: none;
-  transition: background 0.3s ease;
-}
-
-#resultPopup.show {
-  background: rgba(0, 0, 0, 0.4);
-  pointer-events: all;
-}
-
-.popup-content {
-  background: #fff;
-  width: 100%;
-  border-radius: 20px 20px 0 0;
-  padding: 20px;
-  box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.18);
-  transform: translateY(100%);
-  transition: transform 0.4s ease;
-}
-
-#resultPopup.show .popup-content {
-  transform: translateY(0);
-}
-
-
-
-.result-line {
-  margin: 9px 0;
-  font-family: "Young";
-  color: #464752E0;
-}
-.download{
-font-size: 15px;
-border-radius: 10px;
-font-weight: 400;
-display: flex;
-align-items: center;
-transition: .1s;
-justify-content: center;
-font-family: 'Young';
-text-decoration: underline;
-            background: transparent;
-            border: none;
-            margin-top: 15px;
-            color: #3D3E45E8;
-            user-select: none;
-}
-.download:active{
-  transform: scale(.98);
-}
-
-  </style>
   <script src="/assets/js/service-worker.js" defer crossorigin="anonymous"></script>
 <script src="/assets/js/search.js" defer crossorigin="anonymous"></script>
 
@@ -700,7 +640,7 @@ function calculateResults() {
   const L = parseFloat(document.getElementById('fieldLosses').value);
   const Area = parseFloat(document.getElementById('area').value);
   
-  const resultsDiv = document.querySelector(".seed-rate-results");
+  const resultsDiv = document.querySelector(".output-group");
   
   if ([TP, TGW, G, L, Area].some(isNaN)) {
     
