--- a/conversion/roman-numeral-date-converter.html
+++ b/conversion/roman-numeral-date-converter.html
@@ -217,7 +217,7 @@ Everyday Life
   
  </div>
   </div>
-  <div id="resultdiv">
+  <div class="output-group">
     
   </div>
   
@@ -377,17 +377,17 @@ Everyday Life
   </footer>
 
   <style>
-    #resultdiv{
+    .output-group{
       font-family: "Young";
       line-height: 1.6;
       font-size: .96em;
       color: #42445A;
     }
-    #resultdiv hr{
+    .output-group hr{
       border: .5px solid #42445A2E;
       
     }
-    #resultdiv h3,h4{
+    .output-group h3,h4{
       font-family: lexend;
       font-size: .95em;
     margin-bottom: -15px;
@@ -402,7 +402,7 @@ Everyday Life
 const yearInput = document.getElementById("NumberOrRomanNumeralYear");
 const monthInput = document.getElementById("NumberOrRomanNumeralMonth");
 const dayInput = document.getElementById("NumberOrRomanNumeralDay");
-const resultDiv = document.getElementById("resultdiv");
+const resultDiv = document.querySelector(".output-group");
 
 const romanMap = [
   { value: 1000000, numeral: "M̄" },
