--- a/finance/Interest-rate-calculator.html
+++ b/finance/Interest-rate-calculator.html
@@ -317,7 +317,7 @@ Everyday Life
   </div>
  </div>
   </div>
-  <div class="interest-rate-results">
+  <div class="output-group">
     
   </div>
 </div>
@@ -475,48 +475,6 @@ Everyday Life
     <span>Made with <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z"/></svg> in Earth</span>
   </footer>
  
-  <style>
-  .interest-rate-results{
-    font-family: "young";
-    color: #42445A;
-  }
-  .recommendations-list{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-bottom: 20px;
-  }
-  .recommendations-list div{
-    line-height: 1.5;
-font-size: .95em;
-background: #57555C0D;
-border-radius: 12px;
-padding: 10px;
-  }
-  .money-one {
-  font-family: "young";
-  font-size: .91em;
-}
-.head-txt-re-wrap{
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  line-height: 1.4;
-}
-.head-txt-re{
-font-family: young;
-font-weight: 410;
-}
-  .money{
-    font-family: "zalando";
-    font-weight: 550;
-    background: #D5A61A21;
-    color: #D4A61B;
-    padding: 2px;
-    border-radius: 10px;
-    font-size: .9em;
-  }
-  </style>
   <script src="/assets/js/service-worker.js" defer crossorigin="anonymous"></script>
 <script src="/assets/js/search.js" defer crossorigin="anonymous"></script>
 
@@ -527,7 +485,7 @@ font-weight: 410;
   const months = parseInt(document.getElementById("Months").value) || 0;
   const M = parseFloat(document.getElementById("monthlyPayments").value.replace(/,/g, ''));
   
-  const resultsDiv = document.querySelector(".interest-rate-results");
+  const resultsDiv = document.querySelector(".output-group");
   resultsDiv.innerHTML = "";
   
   
@@ -594,7 +552,6 @@ font-weight: 410;
   loadSavedCurrency();
 }
 
-// Enable automatic calculation on input/change
 function enableAutoCalculation() {
   const fields = [
     "#loanAmount",
