--- a/math/foil-calculator.html
+++ b/math/foil-calculator.html
@@ -469,7 +469,7 @@ Everyday Life
  </div>
 </div>
   
-  <div class="foil-results">
+  <div class="output-group">
     
   </div>
   
@@ -631,7 +631,7 @@ Everyday Life
 
 
   <style>
-  .foil-results{
+  .output-group{
     font-family: "young";
     line-height: 1.6;
 font-size: 1em;
@@ -640,13 +640,13 @@ display: flex;
 flex-direction: column;
 gap: -13em;
   }
-  .foil-results p{
+  .output-group p{
     margin-top: -.3em;
   }
-  .foil-results h3{
+  .output-group h3{
     font-size: 1em;
   }
-  .foil-results strong {
+  .output-group strong {
   font-size: .9em;
 }
   </style>
@@ -660,7 +660,7 @@ gap: -13em;
   
   const exponentMGroup = document.getElementById("ExponentM").closest(".input-group");
   const exponentNGroup = document.getElementById("Exponentm").closest(".input-group");
-  const resultBox = document.querySelector(".foil-results");
+  const resultBox = document.querySelector(".output-group");
   
   
   function toggleExponentGroups() {
