--- a/statistics/coin-flipper.html
+++ b/statistics/coin-flipper.html
@@ -186,7 +186,7 @@ Everyday Life
 <div class="container">
 
 <div class="input-group">
-    <div class="flip-result" id="resultDiv"><h3>Heads</h3></div>
+    <div class="flip-result" class="output-group"><h3>Heads</h3></div>
   </div>
   <div data-input-id="check-to-flip-coin-flipper" class="input-group">
     <label><svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
@@ -406,7 +406,7 @@ Everyday Life
 <script defer crossorigin="anonymous">
   
 const flipCheckbox = document.getElementById("flip-coin");
-const resultDiv = document.getElementById("resultDiv");
+const resultDiv = document.querySelector(".output-group");
 
 flipCheckbox.addEventListener("change", () => {
   const flip = Math.random() < 0.5 ? "Heads" : "Tails";
