--- a/404.html
+++ b/404.html
@@ -367,8 +367,7 @@ let isNavOpen = false;
 let isAnimating = false;
 
 function openNav() {
-  if (isNavOpen || isAnimating) return; // Prevent if already open or animating
-
+  if (isNavOpen || isAnimating) return;
   isAnimating = true;
   nav.classList.add("active");
   document.body.classList.add("no-scroll");
@@ -378,18 +377,14 @@ function openNav() {
     overlay.classList.add("overlay");
     document.body.appendChild(overlay);
 
-    // Click outside closes nav
     overlay.addEventListener("click", closeNav);
   }
-
-  // Use requestAnimationFrame for fade-in
   requestAnimationFrame(() => {
     overlay.classList.add("visible");
   });
 
   isNavOpen = true;
 
-  // Wait for fade-in transition to complete before allowing another toggle
   overlay.addEventListener(
     "transitionend",
     () => {
@@ -400,7 +395,7 @@ function openNav() {
 }
 
 function closeNav() {
-  if (!isNavOpen || isAnimating) return; // Prevent if already closed or animating
+  if (!isNavOpen || isAnimating) return;
 
   isAnimating = true;
   nav.classList.remove("active");
@@ -409,7 +404,6 @@ function closeNav() {
   if (overlay) {
     overlay.classList.remove("visible");
 
-    // Remove overlay after fade-out transition
     overlay.addEventListener(
       "transitionend",
       () => {
