--- a/everyday-life.html
+++ b/everyday-life.html
@@ -212,9 +212,11 @@ Everyday Life
  <ul>
    <li><a href="/everyday-life/age-calculator">Age Calculator</a></li>
    <li><a href="/everyday-life/age-difference-calculator">Age Difference Calculator</a></li>
-
+   <li><a href="/everyday-life/boyfriend-day">Boyfriend's Day Countdown</a></li>
    <li><a href="/everyday-life/christmas-countdown">Christmas Countdown</a></li>
    <li><a href="/everyday-life/earth-day-countdown">Earth Day Countdown</a></li>
+   <li><a href="/everyday-life/friendship-day-countdown">Friendship Day Countdown</a></li>
+   <li><a href="/everyday-life/girlfriend-day">Girlfriend's Day Countdown</a></li>
    <li><a href="/everyday-life/new-year-countdown-calculator">New Year Countdown Calculator</a></li>
    <li><a href="/everyday-life/halloween-countdown-calculator">Halloween Countdown Calculator</a></li>
    <li><a href="/everyday-life/easter-countdown">Easter Countdown</a>
