--- a/everyday-life.html
+++ b/everyday-life.html
@@ -212,11 +212,32 @@ Everyday Life
  <ul>
    <li><a href="/everyday-life/age-calculator">Age Calculator</a></li>
    <li><a href="/everyday-life/age-difference-calculator">Age Difference Calculator</a></li>
+   <li><a href="/everyday-life/africa-day-countdown">Africa Day Countdown</a></li>
    <li><a href="/everyday-life/boyfriend-day">Boyfriend's Day Countdown</a></li>
    <li><a href="/everyday-life/christmas-countdown">Christmas Countdown</a></li>
    <li><a href="/everyday-life/earth-day-countdown">Earth Day Countdown</a></li>
    <li><a href="/everyday-life/friendship-day-countdown">Friendship Day Countdown</a></li>
    <li><a href="/everyday-life/girlfriend-day">Girlfriend's Day Countdown</a></li>
+   <li><a href="/everyday-life/human-rights-day-countdown">Human Rights Day Countdown</a></li>
+   <li><a href="/everyday-life/independence-day-countdown">Independence Day Countdown</a></li>
+   <li><a href="/everyday-life/international-day-of-happiness-countdown.html">International Day of Happiness Countdown</a></li>
+   <li><a href="/everyday-life/international-men-day-countdown">International Men Day Countdown</a></li>
+   <li><a href="/everyday-life/international-women-day-countdown">International Women's Day Countdown</a></li>
+   <li><a href="/everyday-life/siblings-day-countdown">Siblings Day Countdown</a></li>
+   <li><a href="/everyday-life/summer-countdown">Summer Countdown</a></li>
+   <li><a href="/everyday-life/thanksgiving-countdown">Thanksgiving Countdown</a></li>
+   <li><a href="/everyday-life/world-animal-day-countdown">World Animal Day Countdown</a></li>
+   <li><a href="/everyday-life/world-autism-awareness-day-countdown">World Autism Awareness Day  Countdown</a></li>
+   <li><a href="/everyday-life/world-cancer-day-countdown">World Cancer Day Countdown</a></li>
+   <li><a href="/everyday-life/world-food-day-countdown"></a>World Food Day Countdown</li>
+   <li><a href="/everyday-life/world-literacy-day-countdown">World Literacy Day Countdown</a></li>
+   <li><a href="/everyday-life/world-mental-health-day-countdown">World Mental Health Day Countdown</a></li>
+   <li><a href="/everyday-life/world-ocean-day-countdown">World Ocean Day Countdown</a></li>
+   <li><a href="/everyday-life/world-refugee-day-countdown">World Refugee Day Countdown</a></li>
+   <li><a href="/everyday-life/world-teacher-day-countdown">World Teacher Day Countdown</a></li>
+   <li><a href="/everyday-life/world-tourism-day-countdown">World Tourism Day Countdown</a></li>
+   <li><a href="/everyday-life/world-water-day-countdown">World Water Day Countdown</a></li>
+   <li><a href="/everyday-life/world-youth-day-countdown">World Youth Day Countdown</a></li>
    <li><a href="/everyday-life/new-year-countdown-calculator">New Year Countdown Calculator</a></li>
    <li><a href="/everyday-life/halloween-countdown-calculator">Halloween Countdown Calculator</a></li>
    <li><a href="/everyday-life/easter-countdown">Easter Countdown</a>
