--- a/everyday-life.html
+++ b/everyday-life.html
@@ -207,7 +207,10 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-
+<h2>Clothing and sewing calculators 👗</h2>
+<ul>
+  <li><a href="/everyday-life/bikini-calculator">Bikini Calculator</a></li>
+</ul>
 <h2>Time and Date 📆</h2>
  <ul>
    <li><a href="/everyday-life/age-calculator">Age Calculator</a></li>
@@ -229,7 +232,7 @@ Everyday Life
    <li><a href="/everyday-life/world-animal-day-countdown">World Animal Day Countdown</a></li>
    <li><a href="/everyday-life/world-autism-awareness-day-countdown">World Autism Awareness Day  Countdown</a></li>
    <li><a href="/everyday-life/world-cancer-day-countdown">World Cancer Day Countdown</a></li>
-   <li><a href="/everyday-life/world-food-day-countdown"></a>World Food Day Countdown</li>
+   <li><a href="/everyday-life/world-food-day-countdown">World Food Day Countdown</a></li>
    <li><a href="/everyday-life/world-literacy-day-countdown">World Literacy Day Countdown</a></li>
    <li><a href="/everyday-life/world-mental-health-day-countdown">World Mental Health Day Countdown</a></li>
    <li><a href="/everyday-life/world-ocean-day-countdown">World Ocean Day Countdown</a></li>
